fix: right align size col

--- a/packages/website/components/account/filesManager/fileRowItem.scss
+++ b/packages/website/components/account/filesManager/fileRowItem.scss
@@ -167,6 +167,10 @@ $file-date: auto;
     }
     &-size {
       padding-right: 2rem;
+      justify-content: flex-end;
+      @include medium {
+        justify-content: flex-start;
+      }
     }
     &-name {
       padding-right: 2.75rem;
